[package]
name = "yanandog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
listenfd = "1.0.2"
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
